@@ -18,6 +18,9 @@
    packages produce RGBA files but don't mark the alpha properly. */
 #undef DEFAULT_EXTRASAMPLE_AS_ALPHA
 
+/* enable deferred strip/tile offset/size loading (experimental) */
+#undef DEFER_STRILE_LOAD
+
 /* Define to 1 if you have the <assert.h> header file. */
 #undef HAVE_ASSERT_H
 
