@@ -1,3 +1,12 @@
+2011-02-18  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* configure.ac, tif_read.c, tif_readdir.c, tif_dir.h, tiffiop.h, 
+	tif_write.c, tif_print.c, tif_jpeg.c, tif_dirwrite.c, tif_write.c:
+	Implement optional support for deferring the load of strip/tile 
+	offset and size tags for optimized scanning of directories.  Enabled
+	with the --enable-defer-strile-load configure option (DEFER_STRILE_LOAD
+	#define in tif_config.h). 
+
 2011-02-11  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* libtiff/tif_print.c: remove unused variable.
